<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_newride"
        android:icon="@drawable/car_icon_selector"
        android:title="@string/title_new_ride" />

    <item
        android:id="@+id/navigation_ridehistory"
        android:icon="@drawable/list_icon_selector"
        android:title="@string/title_ride_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_icon_selector"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

</menu>