<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.capstoneprojectv10.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_newride"
        android:name="com.example.capstoneprojectv10.ui.newride.NewRideFragment"
        android:label="@string/title_new_ride"
        tools:layout="@layout/fragment_new_ride" >
        <action
            android:id="@+id/action_newRideFragment_to_availableRidesFragment"
            app:destination="@layout/activity_available_ride_list" />
        <action
            android:id="@+id/action_newRideFragment_to_mapsFragment"
            app:destination="@layout/fragment_maps" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ridehistory"
        android:name="com.example.capstoneprojectv10.ui.ridehistory.RideHistoryFragment"
        android:label="@string/title_ride_history"
        tools:layout="@layout/fragment_ride_history_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.capstoneprojectv10.ui.profile.ProfileFragment"
        android:label="@string/title_profile">
        <action
            android:id="@+id/action_profileFragment_to_signUpActivity"
            app:destination="@layout/activity_sign_up" />
    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.capstoneprojectv10.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />
</navigation>